# cpp-vaulkan-container

./: .dockerignore  CMakeLists.txt  README.md  hello.cpp  mingw-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
